# mgs-docs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sphinx-build.yml  update-docs.yml
docs/: changelog.html  concepts_refresher.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  search.html  searchindex.js  usage.html  wyoc.html
docs/_sources/: changelog.rst.txt  concepts_refresher.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  usage.rst.txt
docs/_sources/wyoc/: from_scratch.rst.txt
docs/reference/: base16.html  base32.html  base32hex.html  base64.html  base64url.html  reference.html
docs/reference/base_n/concepts/: encoding_traits.html
docs/reference/base_n/types/: basic_codec.html  basic_codec_traits.html  decode_algorithm.html  encode_algorithm.html  padding_policy.html
docs/reference/codecs/concepts/: byte_type.html  codec.html  codec_output.html  codec_traits.html  input_source.html  sized_input_source.html
docs/reference/codecs/types/: basic_codec.html  basic_input_range.html  iterator_sentinel_source.html  output_traits.html
docs/reference/config/types/: ssize_t.html
docs/usage/: advanced.html  basic.html  intermediate.html
docs/wyoc/: base_n.html  from_scratch.html
source/: changelog.rst  concepts_refresher.rst  conf.py  installation.rst  wyoc.rst
source/_templates/: breadcrumbs.html
source/reference/: base16.rst  base32.rst  base32hex.rst  base64.rst  base64url.rst  reference.rst
source/usage/: advanced.rst  basic.rst  intermediate.rst
source/wyoc/: base_n.rst
(+218 files in other folders)
