[tool.poetry]
name = "mgs-docs"
version = "0.1.0"
description = "mgs documentation"
authors = ["Théo DELRIEU <delrieutheo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
